# pokedex

./: .dockerignore  .gitignore  Cargo.toml  README.md  docker-compose.yml
pokeapi/: Cargo.toml
pokeapi/src/: lib.rs  pokeapi_error.rs  pokeapi_models.rs
pokeapi/src/pokeapi_models/: pokemon.rs  pokemon_species.rs
pokedex/: Cargo.toml  Dockerfile
pokedex/src/: lib.rs  main.rs
pokedex/tests/api/: helpers.rs  main.rs  pokemon_info.rs  pokemon_translated.rs
translator/: Cargo.toml
translator/src/: lib.rs  translator_error.rs
