[package]
name = "pokedex"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
pokeapi = { path = "../pokeapi" }

warp = "0.3"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
serde = { version = "1.0", features = ["derive"] }

[dev-dependencies]
wiremock = "0.5"
reqwest = { version = "0.11", features = ["json"] }
